force-app/main/default/objects/NoteTemplate__c/NoteTemplate__c.object-meta.xml
<CustomObject>
    <description>Reusable clinical note snippet (dot phrase). Config object — no FHIR or source-system identifiers.</description>
    <label>Note Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Note Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>