force-app/main/default/objects/NoteTemplate__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progress Note</fullName>
            </value>
            <value>
                <fullName>ROS</fullName>
            </value>
            <value>
                <fullName>Physical Exam</fullName>
            </value>
            <value>
                <fullName>Assessment/Plan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>