force-app/main/default/objects/NoteTemplate__c/fields/Shortcut__c.field-meta.xml
<CustomField>
    <fullName>Shortcut__c</fullName>
    <label>Shortcut</label>
    <length>30</length>
    <type>Text</type>
</CustomField>