force-app/main/default/objects/NoteTemplate__c/listViews/Active_Templates.listView-meta.xml
<ListView>
    <fullName>Active_Templates</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Shortcut__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Templates</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>