force-app/main/default/objects/NoteTemplate__c/listViews/All_Templates.listView-meta.xml
<ListView>
    <fullName>All_Templates</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Shortcut__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Templates</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>